--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_local_notifications: ^19.5.0
   flutter_staggered_animations: ^1.1.1
+  google_fonts: ^6.3.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.20.2
