feat: implement internationalization for UI strings with Indonesian and English support

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   excel: ^4.0.6
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_local_notifications: ^19.5.0
   flutter_staggered_animations: ^1.1.1
   google_fonts: ^6.3.2
@@ -31,3 +33,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
