--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   provider: ^6.1.5+1
   timezone: ^0.10.1
   uuid: ^4.5.2
+  file_picker: ^10.3.7
 
 dev_dependencies:
   flutter_test:
