--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,16 +16,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install Linux dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev zip
-
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           channel: stable
           cache: true
+
+      - name: Install Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev
 
       - name: Fetch packages
         run: flutter pub get
@@ -33,21 +33,25 @@ jobs:
       - name: Enable Linux desktop
         run: flutter config --enable-linux-desktop
 
-      - name: Build Linux (release)
+      - name: Precache toolchains
+        run: flutter precache --linux --no-android --no-ios --no-web
+
+      - name: Build Linux release
         run: flutter build linux --release
 
-      - name: Package Linux
+      - name: Package Linux bundle as deb
         run: |
-          cd build/linux/x64/release/bundle
-          zip -r ../../../../../linux-release.zip .
-          cd -
-        shell: bash
+          chmod +x tool/package_linux.sh
+          tool/package_linux.sh
+          cd dist/linux
+          zip -r ../../linux.zip *.deb
 
       - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-release
-          path: linux-release.zip
+          name: linux-zip
+          path: linux.zip
+          if-no-files-found: error
 
   windows:
     name: Windows
@@ -68,69 +72,59 @@ jobs:
       - name: Enable Windows desktop
         run: flutter config --enable-windows-desktop
 
-      - name: Build Windows (release)
+      - name: Precache Windows toolchain
+        run: flutter precache --windows --no-android --no-ios --no-web
+
+      - name: Build Windows release
         run: flutter build windows --release
 
-      - name: Package Windows
+      - name: Get app version
+        id: get_version
+        shell: bash
         run: |
-          Compress-Archive -Path build\windows\x64\runner\Release\* -DestinationPath windows-release.zip
+          VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //; s/+.*//')
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
+
+      - name: Setup Inno Setup
+        run: |
+          choco install innosetup -y
+        shell: pwsh
+
+      - name: Compile Inno Setup
+        run: |
+          & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" /DAppVersion=${{ steps.get_version.outputs.version }} tool\package_windows.iss
+        shell: pwsh
+
+      - name: Compress Windows installer
+        run: |
+          Compress-Archive -Path dist\budget_management_app_setup.exe -DestinationPath windows.zip
         shell: pwsh
 
       - name: Upload Windows artifact
         uses: actions/upload-artifact@v4
         with:
-          name: windows-release
-          path: windows-release.zip
-
-  macos:
-    name: macOS
-    runs-on: macos-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          channel: stable
-          cache: true
-
-      - name: Fetch packages
-        run: flutter pub get
-
-      - name: Enable macOS desktop
-        run: flutter config --enable-macos-desktop
-
-      - name: Build macOS (release)
-        run: flutter build macos --release
-
-      - name: Package macOS
-        run: |
-          cd build/macos/Build/Products/Release
-          ditto -c -k --sequesterRsrc --keepParent *.app ../../../../../macos-release.zip
-        shell: bash
-
-      - name: Upload macOS artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-release
-          path: macos-release.zip
+          name: windows-zip
+          path: windows.zip
+          if-no-files-found: error
 
   release:
-    name: Create Release
+    name: Publish Release
     runs-on: ubuntu-latest
-    needs: [linux, windows, macos]
+    needs:
+      - linux
+      - windows
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
+          path: dist
           merge-multiple: true
 
-      - name: Create Release
+      - name: Publish GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           generate_release_notes: true
           files: |
-            linux-release.zip
-            windows-release.zip
-            macos-release.zip
+            dist/*.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
