--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,10 @@ name: Release Builds
 
 on:
   push:
-    tags:
-      - 'v*.*.*'
+    branches:
+      - master
+    paths:
+      - 'pubspec.yaml'
 
 permissions:
   contents: write
@@ -128,6 +130,15 @@ jobs:
       - linux
       - windows
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Get app version
+        id: get_version
+        run: |
+          VERSION=$(grep 'version:' pubspec.yaml | sed 's/version: //; s/+.*//')
+          echo "version=v$VERSION" >> $GITHUB_OUTPUT
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
@@ -137,6 +148,8 @@ jobs:
       - name: Publish GitHub Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.get_version.outputs.version }}
+          name: Release ${{ steps.get_version.outputs.version }}
           generate_release_notes: true
           files: |
             dist/*.zip
